# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
.github/workflows/: flake8_lint.yml
page_analyzer/: __init__.py  app.py  db.py  html_parser.py  utils.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/errors/: 404.html  505.html
page_analyzer/templates/includes/: footer.html  nav.html
page_analyzer/templates/urls/: list.html
