[tool.poetry]
name = "python-project-83"
version = "0.1.0"
description = "Project: Page analyzer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
docker = "^7.0.0"
bs4 = "^0.0.2"
validators = "^0.28.1"
requests = "^2.32.2"
responses = "^0.25.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
