[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project: Page analyzer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "page_analyzer" }]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
docker = "^7.0.0"
bs4 = "^0.0.2"
validators = "^0.28.1"
requests = "^2.32.2"
responses = "^0.25.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
